--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -3,7 +3,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-  <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."/>
+<StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
+           style="-fx-background-color: #ECE9E9; -fx-border-width: 0">
+  <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..."
+             style="-fx-border-color: #BFBFBF; -fx-border-radius: 10; -fx-text-fill: black"/>
 </StackPane>
 
