--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -8,7 +8,7 @@
 <?import javafx.stage.Stage?>
 <?import java.net.URL?>
 <fx:root xmlns:fx="http://javafx.com/fxml/1" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17"
-         title="Address App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
+         title="BookKeeper" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
     <icons>
         <Image url="@/images/address_book_32.png"/>
     </icons>
