--- a/src/main/resources/view/RemindersCard.fxml
+++ b/src/main/resources/view/RemindersCard.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-
+<?import javafx.scene.layout.ColumnConstraints?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-    <AnchorPane HBox.hgrow="ALWAYS">
+    <GridPane HBox.hgrow="ALWAYS">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
+        </columnConstraints>
         <children>
             <Label fx:id="title" styleClass="cell_big_label" text="\$title" />
             <Label fx:id="remindersCardList" styleClass="cell_small_label" text="\$remindersCardList" />
         </children>
-    </AnchorPane>
+    </GridPane>
 </HBox>
