--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -350,3 +350,7 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+
+#detailsPane {
+    -fx-background-color: transparent #383838 transparent #383838;
+}
