--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -32,6 +32,7 @@
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="salary" styleClass="cell_small_label" text="\$salary" />
+      <Label fx:id="info" styleClass="cell_small_label" text="\$info" />
     </VBox>
   </GridPane>
 </HBox>
