Fix variable names
Changed some variable names for better consistency.

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -50,7 +50,7 @@
           <padding>
             <Insets top="10" right="10" bottom="10" left="10" />
           </padding>
-          <StackPane fx:id="employeeListPanelPlaceholder" VBox.vgrow="ALWAYS" minHeight="340"/>
+          <StackPane fx:id="panelPlaceholder" VBox.vgrow="ALWAYS" minHeight="340"/>
         </VBox>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
