Fix contact list not displaying issue and add BuyerBuilder
Fix the Label id in PersonCardList.fmxl to solve the contact list not displaying issue.
Add BuyerBuilder to create buyer object for testing, separating it out from PersonBuilder.

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -30,7 +30,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="housingtype" styleClass="cell_small_label" text="\$housingtype" />
+      <Label fx:id="housingType" styleClass="cell_small_label" text="\$housingType" />
       <Label fx:id="postalCode" styleClass="cell_small_label" text="\$postalCode" />
     </VBox>
   </GridPane>
