--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -28,7 +28,7 @@
     -fx-border-color: #E8E3DC; /* light brown */
     -fx-border-width: 2;
     -fx-background-radius: 0;
-    -fx-background-color: #4D3319; /* dark brown button */
+    -fx-background-color: #E8E3DC; /* light brown button */
     -fx-font-family: "Segoe UI", Helvetica, Arial, sans-serif;
     -fx-font-size: 11pt;
     -fx-text-fill: #4D3319; /* text */
@@ -50,7 +50,7 @@
 
 .list-cell {
     -fx-label-padding: 0 0 0 0;
-    -fx-graphic-text-gap : 0;
+    -fx-graphic-text-gap: 0;
     -fx-padding: 0 0 0 0;
     -fx-background-color: #E8E3DC; /* light brown */
 }
