--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -47,13 +47,15 @@
             <HBox VBox.vgrow="ALWAYS">
                <children>
       
-              <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border">
+                          <VBox fx:id="personList" minWidth="340" prefWidth="340" styleClass="pane-with-border" HBox.hgrow="ALWAYS">
                 <padding>
                   <Insets bottom="10" left="10" right="10" top="10" />
                 </padding>
-                <StackPane fx:id="personListPanelPlaceholder" />
+                     <children>
+                   <StackPane fx:id="personListPanelPlaceholder" />
+                     </children>
               </VBox>
-                  <StackPane fx:id="personDetailsPanelPlaceholder" styleClass="pane-with-border" />
+                  <StackPane fx:id="personDetailsPanelPlaceholder" styleClass="pane-with-border" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
 
