--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -13,30 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-<!--
-   <AnchorPane prefHeight="200.0" prefWidth="200.0">
-      <children>
-       <VBox alignment="CENTER_LEFT" minHeight="105">
-         <padding>
-           <Insets bottom="5" left="15" right="5" top="5" />
-         </padding>
-         <HBox alignment="CENTER_LEFT" spacing="5">
-           <Label fx:id="id" styleClass="cell_big_label">
-             <minWidth>
-
-               <Region fx:constant="USE_PREF_SIZE" />
-             </minWidth>
-           </Label>
-           <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
-         </HBox>
-         <FlowPane fx:id="tags" />
-         <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-         <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-         <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-       </VBox>
-      </children>
-   </AnchorPane>
-  -->
   <GridPane HBox.hgrow="ALWAYS">
     <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
@@ -72,5 +48,6 @@
          <RowConstraints />
       </rowConstraints>
   </GridPane>
-    <ImageView fx:id="displayPicture" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+    <ImageView fx:id="displayPicture" fitHeight="90.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true"
+               AnchorPane.leftAnchor="270.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
 </HBox>
