--- a/src/main/resources/view/PersonDetailsPanel.fxml
+++ b/src/main/resources/view/PersonDetailsPanel.fxml
@@ -20,9 +20,9 @@
             <RowConstraints />
          </rowConstraints>
          <children>
-            <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
+            <VBox minHeight="105" GridPane.columnIndex="0">
                <children>
-                  <Label fx:id="name" styleClass="cell_big_label" text="" />
+                  <Label fx:id="name" styleClass="cell_big_label" text="" wrapText="true" />
                   <FlowPane fx:id="tags" />
                   <Label fx:id="phone" styleClass="cell_small_label" text="" />
                   <Label fx:id="address" styleClass="cell_small_label" text="" />
