--- a/src/main/resources/view/PersonDetailsPanel.fxml
+++ b/src/main/resources/view/PersonDetailsPanel.fxml
@@ -14,7 +14,7 @@
       <GridPane alignment="TOP_CENTER">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
+            <ColumnConstraints hgrow="NEVER" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints />
@@ -29,8 +29,11 @@
                   <Label fx:id="email" styleClass="cell_small_label" text="" />
                   <Label fx:id="note" styleClass="cell_small_label" text="" />
                </children>
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
             </VBox>
-            <ImageView fx:id="qrcode" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
+            <ImageView fx:id="qrcode" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
