--- a/src/main/resources/view/PersonDetailsPanel.fxml
+++ b/src/main/resources/view/PersonDetailsPanel.fxml
@@ -22,12 +22,12 @@
          <children>
             <VBox minHeight="105" GridPane.columnIndex="0">
                <children>
-                  <Label fx:id="name" styleClass="cell_big_label" text="" wrapText="true" />
+                  <Label fx:id="name" styleClass="cell_big_label" text="name" wrapText="true" />
                   <FlowPane fx:id="tags" />
-                  <Label fx:id="phone" styleClass="cell_small_label" text="" />
-                  <Label fx:id="address" styleClass="cell_small_label" text="" />
-                  <Label fx:id="email" styleClass="cell_small_label" text="" />
-                  <Label fx:id="note" styleClass="cell_small_label" text="" />
+                  <Label fx:id="phone" styleClass="cell_small_label" text="phone" />
+                  <Label fx:id="address" styleClass="cell_small_label" text="address" />
+                  <Label fx:id="email" styleClass="cell_small_label" text="email" />
+                  <Label fx:id="note" styleClass="cell_small_label" text="note" />
                </children>
                <GridPane.margin>
                   <Insets right="10.0" />
