--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -6,14 +6,16 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ScrollPane?>
+
+<?import javafx.scene.layout.Region?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-         title="ClientCare" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
+         title="ClientCare" minWidth="1000" minHeight="600" onCloseRequest="#handleExit">
   <icons>
     <Image url="@/images/address_book_32.png" />
   </icons>
@@ -54,7 +56,7 @@
             </padding>
             <StackPane fx:id="clientListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
-          <VBox fx:id="clientView" styleClass="pane-with-border" minWidth="300" prefWidth="800" HBox.hgrow="ALWAYS">
+          <VBox fx:id="clientView" styleClass="pane-with-border" minWidth="300" prefWidth="700" HBox.hgrow="ALWAYS">
             <padding>
               <Insets top="10" right="10" bottom="10" left="10" />
             </padding>
@@ -62,13 +64,20 @@
             <StackPane fx:id="clientPolicyTablePlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
           <VBox fx:id="remindersView" styleClass="pane-with-border" minWidth="250" prefWidth="300" maxWidth="350" HBox.hgrow="ALWAYS">
-            <padding>
-              <Insets top="10" right="10" bottom="10" left="10" />
-            </padding>
-            <ScrollPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+            <ScrollPane VBox.vgrow="ALWAYS">
               <content>
-                <StackPane fx:id="lastMetCardPlaceholder" VBox.vgrow="ALWAYS"/>
-                <StackPane fx:id="appointmentsCardPlaceholder" VBox.vgrow="ALWAYS"/>
+                <VBox minWidth="250" prefWidth="300" maxWidth="350">
+                  <padding>
+                    <Insets top="10" right="10" bottom="10" left="10" />
+                  </padding>
+                  <StackPane fx:id="lastMetCardPlaceholder" VBox.vgrow="ALWAYS"/>
+                  <Region>
+                    <padding>
+                      <Insets top="10" right="10" bottom="10" left="10" />
+                    </padding>
+                  </Region>
+                  <StackPane fx:id="appointmentsCardPlaceholder" VBox.vgrow="ALWAYS"/>
+                </VBox>
               </content>
             </ScrollPane>
           </VBox>
