--- a/src/main/resources/view/RemindersCard.fxml
+++ b/src/main/resources/view/RemindersCard.fxml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.VBox?>
 
 <HBox id="cardPane" fx:id="cardPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-    <GridPane HBox.hgrow="ALWAYS">
+    <GridPane styleClass="reminders-card" HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-        <children>
-            <Label fx:id="title" styleClass="cell_big_label" text="\$title" />
+        <VBox alignment="TOP_LEFT" minHeight="105" GridPane.columnIndex="0">
+            <padding>
+                <Insets top="5" right="5" bottom="5" left="15" />
+            </padding>
+            <HBox spacing="5" alignment="TOP_LEFT">
+                <Label fx:id="title" text="\$title" styleClass="cell_big_label" />
+            </HBox>
             <Label fx:id="remindersCardList" styleClass="cell_small_label" text="\$remindersCardList" />
-        </children>
+        </VBox>
     </GridPane>
 </HBox>
