--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -354,16 +354,30 @@
     -fx-background-radius: 0;
 }
 
-#tags {
+#skills {
     -fx-hgap: 7;
     -fx-vgap: 3;
 }
 
-#tags .label {
+#skills .label {
     -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
+    -fx-background-color: #7c3176;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
-    -fx-font-size: 11;
+    -fx-font-size: 12;
+}
+
+#groupMembers {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#groupMembers .label {
+    -fx-text-fill: white;
+    -fx-background-color: #2a6b33;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 14;
 }
