--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -10,33 +10,38 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.stage.Stage?>
 
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.VBox?>
 <fx:root resizable="false" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/21"
          xmlns:fx="http://javafx.com/fxml/1">
-  <icons>
-    <Image url="@/images/help_icon.png" />
-  </icons>
-  <scene>
-      <Scene>
-      <stylesheets>
-        <URL value="@HelpWindow.css" />
-      </stylesheets>
-      <HBox fx:id="helpMessageContainer" alignment="CENTER" spacing="15.0">
-        <children>
-          <Label fx:id="helpMessage" text="Label" />
-               <AnchorPane>
-                  <children>
-                <Button fx:id="copyButton" alignment="CENTER" mnemonicParsing="false" onAction="#openUrl"
-                        text="Open User Guide" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                  </children>
-               </AnchorPane>
-        </children>
-        <opaqueInsets>
-          <Insets bottom="10.0" left="5.0" right="10.0" top="5.0" />
-        </opaqueInsets>
-        <padding>
-          <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-        </padding>
-      </HBox>
-      </Scene>
-  </scene>
+    <icons>
+        <Image url="@/images/help_icon.png"/>
+    </icons>
+    <scene>
+        <Scene>
+            <stylesheets>
+                <URL value="@HelpWindow.css"/>
+            </stylesheets>
+            <HBox fx:id="helpWindowContainer" alignment="CENTER" spacing="15.0">
+                <opaqueInsets>
+                    <Insets bottom="10.0" left="5.0" right="10.0" top="5.0"/>
+                </opaqueInsets>
+                <padding>
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
+                </padding>
+                <VBox>
+                    <Label text="${'Available commands:\n'}"/>
+                    <VBox fx:id="helpMessageContainer"/>
+                    <VBox>
+                        <Label text="${'\nTo view more information about a specific command, enter the command into the input box and press &lt;Enter&gt;'}"></Label>
+                        <Label text="${'\nNeed more help? Refer to the user guide at https://ay2324s2-cs2103t-t17-3.github.io/tp/UserGuide.html'}"/>
+                    </VBox>
+                </VBox>
+                <AnchorPane>
+                    <Button fx:id="copyButton" alignment="CENTER" mnemonicParsing="false" onAction="#openUrl"
+                            text="Open User Guide" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0"/>
+                </AnchorPane>
+            </HBox>
+        </Scene>
+    </scene>
 </fx:root>
