Edit GUI to be split in the middle

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -48,7 +48,7 @@
 
         <HBox HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" minWidth="680" prefWidth="1000">
           <VBox fx:id="befriendeeList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS"
-          HBox.hgrow="ALWAYS" maxWidth="500">
+          HBox.hgrow="ALWAYS">
             <padding>
               <Insets top="10" right="10" bottom="10" left="10" />
             </padding>
