--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -33,6 +33,8 @@
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="grade" styleClass="cell_small_label" text="\$grade" />
       <Label fx:id="subject" styleClass="cell_small_label" text="\$subject" />
+      <Label fx:id="attendance" styleClass="cell_small_label" text="\$attendance" />
+      <Label fx:id="payment" styleClass="cell_small_label" text="\$payment" />
       <FlowPane fx:id="dateTimes" />
     </VBox>
   </GridPane>
