--- a/src/main/resources/view/RemindersCard.fxml
+++ b/src/main/resources/view/RemindersCard.fxml
@@ -12,11 +12,11 @@
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="150" />
         </columnConstraints>
-        <VBox alignment="TOP_LEFT" minHeight="105" GridPane.columnIndex="0">
+        <VBox alignment="TOP_LEFT" minHeight="60" GridPane.columnIndex="0">
             <padding>
                 <Insets top="5" right="5" bottom="5" left="15" />
             </padding>
-            <HBox spacing="5" alignment="TOP_LEFT">
+            <HBox spacing="5">
                 <Label fx:id="title" text="\$title" styleClass="cell_big_label" />
             </HBox>
             <Label fx:id="remindersCardList" styleClass="cell_small_label" text="\$remindersCardList" />
