--- a/src/main/resources/view/ClientDetailsCard.fxml
+++ b/src/main/resources/view/ClientDetailsCard.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<ScrollPane prefHeight="250.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<ScrollPane prefHeight="250.0" prefWidth="700.0" fitToWidth="true" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <content>
        <GridPane prefHeight="250.0" prefWidth="700.0">
         <columnConstraints>
