--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -31,6 +31,7 @@
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="studentid" styleClass="cell_small_label" text="\$studentid" />
+      <Label fx:id="description" styleClass="cell_small_label" text="\$description"/>
     </VBox>
   </GridPane>
 </HBox>
