--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -350,3 +350,11 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
 }
+.company {
+    -fx-text-fill: white;
+    -fx-background-color: #5BB26A;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 3;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
