--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -17,7 +17,7 @@
     </columnConstraints>
     <VBox alignment="CENTER_LEFT" minHeight="105" GridPane.columnIndex="0">
       <padding>
-        <Insets top="5" right="5" bottom="5" left="15" />
+        <Insets top="5" right="5" bottom="10" left="15" />
       </padding>
       <HBox spacing="5" alignment="CENTER_LEFT">
         <Label fx:id="id" styleClass="cell_big_label">
@@ -31,9 +31,9 @@
       </HBox>
       <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="company" styleClass="cell_small_label" text="\$company" />
+      <Label fx:id="address" styleClass="cell_small_label" text="\$address" minHeight="-Infinity" visible="false" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" minHeight="-Infinity" visible="false" />
+      <Label fx:id="company" styleClass="company" text="\$company" minHeight="-Infinity" visible="false" />
     </VBox>
   </GridPane>
 </HBox>
