Refactor task class

--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -30,8 +30,8 @@
 
                      <!--Label fx:id="mark" styleClass="cell_small_label" text="\$mark" /-->
 
-                     <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
-                <!-- Label fx:id="name" text="\$first" styleClass="cell_big_label" / -->
+                    <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+                    <Label fx:id="description" styleClass="cell_small_label" text="\$description" />
             </HBox>
             <FlowPane fx:id="tags" />
 
