Added test cases

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -31,8 +31,8 @@
       </HBox>
       <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" minHeight="-Infinity" visible="false" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" minHeight="-Infinity" visible="false" />
+      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
+      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <Label fx:id="company" styleClass="company" text="\$company" minHeight="-Infinity" visible="false" />
     </VBox>
   </GridPane>
