--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -352,7 +352,7 @@
 }
 .company {
     -fx-text-fill: white;
-    -fx-background-color: #5BB26A;
+    -fx-background-color: #69866F;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 3;
     -fx-background-radius: 2;
