--- a/src/main/resources/view/GreenTheme.css
+++ b/src/main/resources/view/GreenTheme.css
@@ -331,9 +331,9 @@
 #commandTextField {
     -fx-background-color: transparent #383838 transparent #383838;
     -fx-background-insets: 0;
-    -fx-border-color: transparent transparent #383838 transparent;
+    -fx-border-color: transparent transparent #69866F transparent;
     -fx-border-insets: 0;
-    -fx-border-width: 1;
+    -fx-border-width: 2;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
@@ -344,7 +344,7 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color: transparent, #383838, transparent, #383838;
+    -fx-background-color: transparent, #b9ecc4, transparent, #b9ecc4;
     -fx-background-radius: 0;
 }
 
