--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -30,8 +30,7 @@
       <FlowPane fx:id="tags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-<!--      <Label fx:id="policyName" styleClass="cell_small_label" text="\$policyName" />-->
+      <FlowPane fx:id="policies" />
     </VBox>
   </GridPane>
 </HBox>
