--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -5,6 +5,12 @@
      -fx-min-height : 40px;
 }
 
+#titleLogoLabel .label {
+     -fx-font-family: "Segoe UI Light";
+     -fx-font-size: 13pt;
+     -fx-text-fill: #000000;
+}
+
 #labelCommandHolder{
     -fx-padding : 10 10 10 10;
     -fx-background-color: #C7C8CC;
@@ -12,7 +18,7 @@
 }
 
 
-#commandTextField{
+#commandTextField {
     -fx-background-color: #FFFFFF;
     -fx-background-insets: 0;
     -fx-border-color: transparent transparent #000000 transparent;
@@ -73,28 +79,46 @@
 
 #cardPane {
     -fx-background-color: transparent;
-    -fx-border-width: 0;
+    -fx-padding : 10 10 10 10;
 }
 
 
 .list-cell:filled:even {
     -fx-background-color: #E3E1D9;
+    -fx-background-insets : 10 0 10 0;
+    -fx-background-radius : 30px;
+    -fx-padding: 10 10 10 10;
+    -fx-border-width : 1px;
+    -fx-border-color : transparent transparent #C7C8CC transparent;
 }
 
 .list-cell:filled:odd {
     -fx-background-color: #F2EFE5;
+    -fx-background-insets : 10 0 10 0;
+    -fx-background-radius : 30px;
+    -fx-padding : 10 10 10 10;
+    -fx-border-width : 1px;
+    -fx-border-color : transparent transparent #C7C8CC transparent;
 }
 
 .list-cell:filled:selected {
     -fx-background-color: #B4B4B8;
+    -fx-border-width : 0;
+    -fx-background-radius : 30px;
+    -fx-border-width : 1px;
+        -fx-border-color : transparent transparent #C7C8CC transparent;
 }
 
 .list-cell:filled:selected #cardPane {
     -fx-border-color: #000000;
+    -fx-border-width : 0;
+    -fx-background-radius : 30px;
 }
 
 .list-cell .label {
     -fx-text-fill: black;
+    -fx-font-size: 13pt;
+    -fx-font-family: "Segoe UI Semibold";
 }
 
 .scroll-bar {
@@ -111,7 +135,7 @@
 }
 
 .menu-bar .label {
-    -fx-font-size: 14pt;
+    -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: black;
     -fx-opacity: 0.9;
@@ -119,4 +143,22 @@
 
 .menu .left-container {
     -fx-background-color: black;
+}
+
+#lessons {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#lessons .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 13;
+}
+
+#personListView {
+    -fx-padding : 0 20 0 20;
 }
